[tool.poetry]
name = "usgsxplore"
version = "0.0.2"
description = "Search and download data or scenes from USGS API"
authors = ["Godin Luc <godin.luc2002@gmail.com>"]
maintainers = ["Amaury Dehecq <this-is-not-an-email@a.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/adehecq/usgs_explorer"
repository = "https://github.com/adehecq/usgs_explorer"
documentation = "https://github.com/adehecq/usgs_explorer"
keywords = ["earth observation","remote sesing", "GIS","satellite imagery", "USGS", "M2M"]


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
geopandas = "^1.0.1"
tqdm = "^4.66.4"
shapely = "^2.0.5"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
flake8 = "^7.1.0"
pre-commit = "^3.7.1"

[tool.poetry.scripts]
usgsxplore = "usgsxplore.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
